--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.9.0",
     "@solidjs/router": "^0.13.2",
+    "@translate-tools/core": "^2.0.1",
     "groq-sdk": "^0.3.2",
     "solid-js": "^1.8.15"
   },
