--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && npm run build:css && vite build",
     "preview": "vite preview",
     "start": "python webview\\pywebview\\start.py",
-    "pack": "pyinstaller webview\\pywebview\\start.py --onefile --noconsole --add-data \"dist/*.html;dist\" --add-data \"dist/*.ico;dist\" --add-data \"dist/assets/*;dist/assets\" --icon=dist/favicon.ico",
+    "pack": "pyinstaller webview\\pywebview\\start.py --onefile --noconsole --add-data \"dist/*.html;dist\" --add-data \"dist/*.ico;dist\" --add-data \"dist/assets/*;dist/assets\" --icon=dist/app.ico",
     "css:dev": "tailwindcss -i src/input.css -o output/output.css --watch",
     "build:css": "tailwindcss -i src/input.css -o output/output.css"
   },
