--- a/webview/gowebview/resources.rc
+++ b/webview/gowebview/resources.rc
@@ -1,2 +1,3 @@
 // windres resources.rc -O coff -o resources.syso
-1 ICON "assets/favicon.ico"
+1 ICON "assets/app.ico"
+2 ICON "assets/favicon.ico"
