--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "solid-js": "^1.8.15"
   },
   "devDependencies": {
+    "@gradio/client": "^1.4.0",
     "@types/node": "^20.12.7",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
