--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@gradio/client": "^1.4.0",
     "@types/node": "^20.12.7",
     "tailwindcss": "^3.4.3",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-solid": "^2.10.2"
