--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.9.0",
+    "@huggingface/inference": "^2.8.1",
     "@solidjs/router": "^0.13.2",
     "@translate-tools/core": "^2.0.1",
     "groq-sdk": "^0.3.2",
     "solid-js": "^1.8.15"
   },
   "devDependencies": {
-    "@gradio/client": "^1.4.0",
+    "@gradio/client": "^0.17.0",
     "@types/node": "^20.12.7",
     "tailwindcss": "^3.4.3",
     "tsconfig-paths": "^4.2.0",
