--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && npm run build:css && vite build",
     "preview": "vite preview",
-    "start": "python webview\\pywebview\\start.py",
+    "start": "python webview\\pywebview\\start.py -debug",
     "pack": "pyinstaller webview\\pywebview\\start.py --onefile --noconsole --add-data \"dist/*.html;dist\" --add-data \"dist/*.ico;dist\" --add-data \"dist/assets/*;dist/assets\" --icon=dist/app.ico",
     "css:dev": "tailwindcss -i src/input.css -o output/output.css --watch",
     "build:css": "tailwindcss -i src/input.css -o output/output.css"
