--- a/package.json
+++ b/package.json
@@ -5,24 +5,24 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && npm run build:css && vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "python webview\\pywebview\\start.py -debug",
-    "pack": "pyinstaller webview\\pywebview\\start.py --onefile --noconsole --add-data \"dist/*.html;dist\" --add-data \"dist/*.ico;dist\" --add-data \"dist/assets/*;dist/assets\" --icon=dist/app.ico",
-    "css:dev": "tailwindcss -i src/input.css -o output/output.css --watch",
-    "build:css": "tailwindcss -i src/input.css -o output/output.css"
+    "pack": "pyinstaller webview\\pywebview\\start.py --onefile --noconsole --add-data \"dist/*.html;dist\" --add-data \"dist/*.ico;dist\" --add-data \"dist/assets/*;dist/assets\" --icon=dist/app.ico"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@gradio/client": "^1.8.0",
     "@huggingface/inference": "^2.8.1",
     "@solidjs/router": "^0.15.2",
+    "ai-translate": "file:",
     "groq-sdk": "^0.9.1",
     "solid-js": "^1.9.3"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.0.13",
     "@types/node": "^22.10.3",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.2",
     "vite": "^6.0.6",
